# ocs_extractor

./: .gitignore  README.md  main.py  pyproject.toml  requirement.txt
config/: db_config.py
core/: db.py
cron/: update_last_user.cron  update_last_user.sh
exporter/: base.py  csv_exporter.py
layouts/: default_layout.py
triggers/: mysql_keep_user.sql
